# react-native-ohos-docviewer

./: README.md  package.json
harmony/: docviewer.har
harmony/docviewer/: Index.ets  oh-package.json5
harmony/docviewer/src/main/: module.json5
harmony/docviewer/src/main/cpp/: CMakeLists.txt  DocViewerPackage.h
harmony/docviewer/src/main/ets/: DocViewerPackage.ets  mime.ts
harmony/docviewer/src/main/ets/turbomodule/: DocViewerTurboModule.ts
harmony/docviewer/src/main/utils/: Mime.ts
harmony/docviewer/src/ohosTest/: module.json5
lib/: index.d.ts  index.js
src/: index.tsx
src/specs/: NativeDocViewer.ts
